syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.student;

import "ClassesDefinitions.proto";

// Student -> ClassServer Service

message EnrollRequest {
  Student student = 1;
}

message EnrollResponse {
  ResponseCode code = 1;
}

service StudentService {
  rpc listClass(DumpRequest) returns (DumpResponse);
  rpc enroll(EnrollRequest) returns (EnrollResponse);
}
